# oecophylla

./: .env.example  .gitignore  Makefile  Oecophylla v2 - Apple Glass.html  Oecophylla v3 - Tailwind Glass.html  Oecophylla.html  README.md  agent.md  claude.md  compose.dev.yaml  compose.yaml
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-05-28T04-14-27-503Z.yml  page-2026-05-28T04-36-15-398Z.yml  page-2026-05-28T04-37-40-454Z.yml  page-2026-05-28T04-39-12-861Z.yml  page-2026-05-28T04-39-36-759Z.yml  page-2026-05-28T04-39-48-809Z.yml  page-2026-05-28T04-41-08-143Z.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  compose.yaml  deny.toml  rust-toolchain.toml
backend/.claude/: settings.local.json
backend/crates/common/: Cargo.toml
backend/crates/common/src/: auth.rs  config.rs  db.rs  error.rs  events.rs  ids.rs  kafka.rs  lib.rs  metrics.rs  models.rs  redis.rs  time.rs
backend/crates/common/src/middleware/: auth.rs  metrics_layer.rs  mod.rs  rate_limit.rs  trace.rs
backend/docs/superpowers/plans/: 2026-05-24-axum-postgres-base-template.md
backend/docs/superpowers/specs/: 2026-05-24-axum-postgres-base-template-design.md
backend/migrations/: 20260524000001_init_items.sql
backend/services/auth-service/: Cargo.toml  Dockerfile
backend/services/auth-service/src/: handlers.rs  main.rs  repo.rs  state.rs
backend/services/auth-service/tests/: smoke.rs
backend/services/cache-invalidator/: Cargo.toml  Dockerfile
backend/services/cache-invalidator/src/: consumer.rs  main.rs
backend/services/content-service/: Cargo.toml  Dockerfile
backend/services/content-service/src/: cursor.rs  handlers.rs  main.rs  repo.rs  topics.rs
backend/services/content-service/tests/: smoke.rs
backend/services/feed-service/: Cargo.toml  Dockerfile
backend/services/feed-service/src/: cache.rs  handlers.rs  main.rs  recommendation.rs  repo.rs  state.rs  types.rs
backend/services/feed-service/tests/: smoke.rs
backend/services/interaction-service/: Cargo.toml  Dockerfile
backend/services/interaction-service/src/: comment_dto.rs  comment_fanout.rs  events.rs  handlers.rs  main.rs  repo.rs  state.rs
backend/services/interaction-service/tests/: smoke.rs
backend/services/moderation-service/: Cargo.toml  Dockerfile
backend/services/moderation-service/src/: config.rs  cursor.rs  handlers.rs  main.rs  repo.rs  state.rs  types.rs
backend/services/moderation-service/tests/: smoke.rs
backend/services/notification-service/: Cargo.toml  Dockerfile
backend/services/notification-service/src/: cache.rs  config.rs  cursor.rs  fanout.rs  handlers.rs  kafka.rs  main.rs  repo.rs  state.rs  types.rs
backend/services/user-service/: Cargo.toml  Dockerfile
backend/services/user-service/src/: handlers.rs  main.rs  repo.rs  state.rs
backend/services/user-service/tests/: smoke.rs
backend/src/: config.rs  error.rs  main.rs
backend/src/db/: items.rs
backend/src/routes/: health.rs  items.rs  mod.rs
docs/: FRONTEND_HANDOFF_PROMPT.md
docs/superpowers/plans/: 2026-05-25-foundation-identity-content-plan.md  2026-05-25-phase-2a-interactions-plan.md  2026-05-26-phase-2b-feed-recommendation-plan.md  2026-05-26-phase-3-moderation-notifications-nlp-plan.md  2026-05-27-frontend-apple-glass-route-adaptation.md
docs/superpowers/specs/: 2026-05-25-foundation-identity-content-design.md  2026-05-25-phase-2a-interactions-design.md  2026-05-26-phase-2b-feed-recommendation-design.md  2026-05-26-phase-3-moderation-notifications-nlp-design.md
envoy/: envoy.yaml
frontend/: .npmrc  Dockerfile  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.json  vitest.config.ts
frontend/e2e/: auth.spec.ts  comment.spec.ts  helpers.ts  nav.spec.ts  post.spec.ts  search.spec.ts
frontend/src/: app.css  app.html  hooks.server.ts
frontend/src/lib/: api.test.ts  api.ts  types.ts
frontend/src/lib/actions/: viewTracker.ts
frontend/src/lib/api/: notifications.ts
frontend/src/lib/apple-glass/: AppleGlassApp.svelte  data.ts
frontend/src/lib/components/: AdminAuditTable.svelte  AdminReportsTable.svelte  AuthForm.svelte  CommentForm.svelte  CommentItem.svelte  Composer.svelte  FeedList.svelte  (+11 more)
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/static/: manifest.json
infra/grafana/dashboards/: oecophylla-overview.json
infra/kafka/: init-topics.sh
infra/prometheus/: prometheus.yml
migrations/: 20260525000001_init_enums.sql  20260525000002_users.sql  20260525000003_follows.sql  20260525000004_posts.sql  20260525000005_posts_counters.sql  20260525000006_interactions.sql  20260525000007_comments.sql  20260525000008_reports.sql  20260525000009_user_pref_vectors.sql  20260526000010_audit_logs.sql  20260526000011_notifications.sql  20260526000012_search_discovery.sql
recommendation_api/: Dockerfile  requirements.txt
recommendation_api/app/: db.py  evaluate.py  features.py  main.py  ranking.py  schemas.py  settings.py
recommendation_api/tests/: test_diversity.py  test_evaluate.py  test_health.py  test_ranking.py
scripts/: Dockerfile  admin.jsx  app.jsx  auth.jsx  charts.jsx  data.jsx  evaluate.py  feed.jsx  icons.jsx  mobile.jsx  pages.jsx  requirements.txt  seed.py  seed_phase1.py  shell.jsx  smoke_phase2b.sh  smoke_phase3.sh  smoke_phase4.sh
services/analytics-service/: Dockerfile  requirements.txt
services/analytics-service/app/: main.py
styles/: admin.css  glass.css  responsive.css  shell.css  tokens.css
tw/: admin.jsx  app.jsx  auth.jsx  base.css  feed.jsx  mobile.jsx  pages.jsx  preset.js  shell.jsx  tailwind-config.js
workers/feature_store_worker/: Dockerfile  requirements.txt
workers/feature_store_worker/app/: features.py  main.py  settings.py
workers/feature_store_worker/tests/: test_features.py
workers/nlp_worker/: Dockerfile  requirements.txt
workers/nlp_worker/app/: infer.py  kafka_consumer.py  keywords.py  main.py  settings.py
workers/nlp_worker/tests/: test_consumer_flush.py  test_infer_idempotent.py  test_keywords.py
(+63 files in other folders)
