[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["trace"] }

sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "macros",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

figment = { version = "0.10", features = ["env"] }
dotenvy = "0.15"

thiserror = "2.0.18"
anyhow = "1"

uuid = { version = "1.23.1", features = ["v7", "serde"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
