[workspace]
resolver = "2"
members = [
    "crates/common",
    "services/auth-service",
    "services/user-service",
    "services/content-service",
    "services/interaction-service",
    "services/feed-service",
    "services/cache-invalidator",
    "services/moderation-service",
    "services/notification-service",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Oecophylla Team"]

[workspace.dependencies]
# Async runtime + HTTP
tokio        = { version = "1.41", features = ["full"] }
axum         = { version = "0.7", features = ["macros", "http2", "tracing"] }
tower        = { version = "0.5", features = ["full"] }
tower-http   = { version = "0.6", features = ["trace", "cors", "request-id", "util", "fs"] }
hyper        = { version = "1", features = ["full"] }
http         = "1"

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# DB + cache + queue
sqlx         = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
deadpool-redis = { version = "0.18", features = ["rt_tokio_1"] }
rdkafka      = { version = "0.36", features = ["cmake-build", "tokio"] }

# Auth + crypto
jsonwebtoken = { version = "9", default-features = false }  # no use_pem → no simple_asn1 → no time 0.3.47
argon2       = "0.5"
rand         = "0.8"
sha2         = "0.10"

# Misc
uuid         = { version = "1.11", features = ["v7", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
thiserror    = "1"
anyhow       = "1"
validator    = { version = "0.19", features = ["derive"] }
config       = { version = "0.14", default-features = false, features = ["toml", "yaml"] }
figment      = { version = "0.10", features = ["env", "toml"] }
metrics      = "0.24"
metrics-exporter-prometheus = "0.16"

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Test
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }

# Local crates
common       = { path = "crates/common" }
