[workspace]
resolver = "2"
members = [
    "crates/common",
    "services/auth-service",
    "services/user-service",
    "services/content-service",
    "services/interaction-service",
    "services/feed-service",
    "services/cache-invalidator",
    "services/moderation-service",
    "services/notification-service",
]

[workspace.package]
edition = "2021"
rust-version = "1.94.0"
license = "Apache-2.0"
authors = ["Oecophylla Team"]

[workspace.dependencies]
# Async runtime + HTTP
tokio        = { version = "1.41", features = ["full"] }
axum         = { version = "0.8.9", features = ["macros", "http2", "tracing"] }
tower        = { version = "0.5", features = ["full"] }
tower-http   = { version = "0.6", features = ["trace", "cors", "request-id", "util", "fs"] }
hyper        = { version = "1", features = ["full"] }
http         = "1"

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# DB + cache + queue
sqlx         = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
deadpool-redis = { version = "0.23.0", features = ["rt_tokio_1"] }
rdkafka      = { version = "0.39.0", features = ["cmake-build", "tokio"] }

# Auth + crypto
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }  # no use_pem → no simple_asn1 → no time 0.3.47
argon2       = "0.5"
rand         = "0.10.1"
sha2         = "0.11.0"

# Misc
uuid         = { version = "1.11", features = ["v7", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
thiserror    = "2.0.18"
anyhow       = "1"
validator    = { version = "0.20.0", features = ["derive"] }
config       = { version = "0.15.23", default-features = false, features = ["toml", "yaml"] }
figment      = { version = "0.10", features = ["env", "toml"] }
metrics      = "0.24"
metrics-exporter-prometheus = "0.18.3"

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Test
reqwest      = { version = "0.13.4", default-features = false, features = ["rustls", "json", "cookies"] }

# Local crates
common       = { path = "crates/common" }
