[package]
name = "common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
deadpool-redis.workspace = true
rdkafka.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true
sha2.workspace = true
base64 = "0.22"
hex    = "0.4"
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
validator.workspace = true
figment.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
