[package]
name = "user-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
common.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
deadpool-redis.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
# reqwest added in Task 9 when integration tests are written
serde_json.workspace = true
tokio.workspace = true
